--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "maeum",
-  "version": "1.0.0",
-  "description": "well made fastify.js boilerplate",
+  "version": "1.1.0",
+  "description": "Delicious fastify.js boilerplate",
   "engines": {
     "node": ">=16.0.0"
   },
@@ -38,73 +38,75 @@
     "@tsconfig/node16": "^1.0.3",
     "@types/archiver": "^5.3.1",
     "@types/debug": "^4.1.7",
-    "@types/figlet": "^1.5.4",
-    "@types/jest": "^28.1.4",
-    "@types/node": "^18.0.1",
+    "@types/figlet": "^1.5.5",
+    "@types/jest": "^29.0.0",
+    "@types/node": "^18.7.15",
     "@types/node-polyglot": "^2.4.2",
     "@types/shelljs": "^0.8.11",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.30.4",
-    "@typescript-eslint/eslint-plugin-tslint": "^5.30.4",
-    "@typescript-eslint/parser": "^5.30.4",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/eslint-plugin-tslint": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
     "archiver": "^5.3.1",
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.19.0",
+    "eslint": "^8.23.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^3.2.0",
+    "eslint-import-resolver-typescript": "^3.5.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsdoc": "^39.3.3",
+    "eslint-plugin-jsdoc": "^39.3.6",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^4.2.1",
-    "fast-maker": "^1.0.1",
+    "fast-maker": "^1.0.2",
     "figlet": "^1.5.2",
     "jest": "^28.1.2",
-    "just-scripts": "^2.0.0",
-    "nodemon": "^2.0.18",
+    "just-scripts": "^2.0.1",
+    "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
     "prettier-eslint": "^15.0.1",
-    "prettier-plugin-organize-imports": "^3.0.0",
+    "prettier-plugin-organize-imports": "^3.1.1",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.5",
-    "simple-tjscli": "^1.0.8",
-    "ts-jest": "^28.0.5",
+    "simple-tjscli": "^1.1.2",
+    "ts-jest": "^28.0.8",
     "ts-loader": "^9.3.1",
-    "ts-node": "^10.8.2",
-    "tsconfig-paths": "^4.0.0",
-    "tsconfig-paths-webpack-plugin": "^3.5.2",
-    "typescript": "^4.7.4",
-    "webpack": "^5.73.0",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.0",
+    "tsconfig-paths-webpack-plugin": "^4.0.0",
+    "typescript": "^4.8.2",
+    "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-merge": "^5.8.0",
     "webpack-node-externals": "^3.0.0",
     "webpackbar": "^5.0.2"
   },
   "dependencies": {
-    "@fastify/cors": "^8.0.0",
-    "@fastify/swagger": "^7.4.1",
+    "@fastify/cors": "^8.1.0",
+    "@fastify/multipart": "^7.1.2",
+    "@fastify/swagger": "^7.5.1",
     "accept-language": "^3.0.18",
     "ajv": "^8.11.0",
+    "ajv-formats": "^2.1.1",
     "change-case": "^4.1.2",
     "colors": "^1.4.0",
-    "dayjs": "^1.11.3",
+    "dayjs": "^1.11.5",
     "debug": "^4.3.4",
-    "dotenv": "^16.0.1",
-    "fastify": "^4.2.0",
-    "fastify-plugin": "^3.0.1",
+    "dotenv": "^16.0.2",
+    "fastify": "^4.5.3",
+    "fastify-plugin": "^4.2.1",
     "http-status-codes": "^2.2.0",
     "jin-curlize": "^0.5.0",
-    "jin-frame": "^1.0.0",
+    "jin-frame": "^2.5.1",
     "json-schema": "^0.4.0",
-    "jsonc-parser": "^3.0.0",
-    "my-easy-fp": "^0.13.0",
-    "my-node-fp": "^0.7.0",
+    "jsonc-parser": "^3.2.0",
+    "my-easy-fp": "^0.16.0",
+    "my-node-fp": "^0.8.1",
     "node-polyglot": "^2.4.2",
     "pm2": "^5.2.0",
-    "ts-essentials": "^9.1.2",
+    "type-fest": "^2.19.0",
     "urlcat": "^2.0.4",
-    "uuid": "^8.3.2",
+    "uuid": "^9.0.0",
     "winston": "^3.8.1"
   }
 }
