# enhance http logging mechanishm
- simple routing apply on http logging exclude url
- directory name refactor: .config > .configs
- split .eslintignore from .eslintrc.js
- package change: colorjs > chalk
- timestamp invalid display bug fix in artifact script
- deps
    - fast-maker 1.0.2 > 1.1.0
    - just-scripts 2.0.1 > 2.0.5

--- a/package.json
+++ b/package.json
@@ -6,27 +6,27 @@
     "node": ">=16.0.0"
   },
   "scripts": {
-    "artifact": "just --config ./.config/just.config.ts artifact",
-    "thin-artifact": "just --config ./.config/just.config.ts thin-artifact",
-    "build": "just --config ./.config/just.config.ts build",
-    "pack": "just --config ./.config/just.config.ts pack",
-    "clean": "just --config ./.config/just.config.ts clean",
-    "dev": "nodemon --config ./.config/nodemon.json",
+    "artifact": "just --config ./.configs/just.config.ts artifact",
+    "thin-artifact": "just --config ./.configs/just.config.ts thin-artifact",
+    "build": "just --config ./.configs/just.config.ts build",
+    "pack": "just --config ./.configs/just.config.ts pack",
+    "clean": "just --config ./.configs/just.config.ts clean",
+    "dev": "nodemon --config ./.configs/nodemon.json",
     "devs": "concurrently \"npm run dev\" \"npm run tjs-w\" \"npm run route-w\"",
-    "debug": "just --config ./.config/just.config.ts debug",
-    "just": "just --config ./.config/just.config.ts",
-    "lint": "just --config ./.config/just.config.ts lint",
-    "route": "cross-env NODE_ENV=production fast-maker route --config ./.config/.fastmakerrc",
-    "route-w": "cross-env NODE_ENV=production fast-maker watch --config ./.config/.fastmakerrc",
+    "debug": "just --config ./.configs/just.config.ts debug",
+    "just": "just --config ./.configs/just.config.ts",
+    "lint": "just --config ./.configs/just.config.ts lint",
+    "route": "cross-env NODE_ENV=production fast-maker route --config ./.configs/.fastmakerrc",
+    "route-w": "cross-env NODE_ENV=production fast-maker watch --config ./.configs/.fastmakerrc",
     "start:withoutpm2": "TZ=Asia/Seoul node --enable-source-maps src/app.js",
-    "start": "TZ=Asia/Seoul ./node_modules/pm2/bin/pm2-runtime -s start .config/pm2.config.js > /dev/null",
+    "start": "TZ=Asia/Seoul ./node_modules/pm2/bin/pm2-runtime -s start .configs/pm2.config.js > /dev/null",
     "test": "cross-env DEBUG=maeum:* jest --detectOpenHandles --runInBand",
-    "tjs": "tjscli tsj -i --overwrite --config ./.config/.tjsclirc",
-    "tjs-w": "tjscli tsj-w --config ./.config/.tjsclirc --overwrite --watch .",
-    "tsc": "just --config ./.config/just.config.ts tsc",
-    "tsc-watch": "just --config ./.config/just.config.ts tsc-watch",
+    "tjs": "tjscli tsj -i --overwrite --config ./.configs/.tjsclirc",
+    "tjs-w": "tjscli tsj-w --config ./.configs/.tjsclirc --overwrite --watch .",
+    "tsc": "just --config ./.configs/just.config.ts tsc",
+    "tsc-watch": "just --config ./.configs/just.config.ts tsc-watch",
     "typeorm": "cross-env DISABLE_RELATION_MODEL=on ts-node -r tsconfig-paths/register -r scripts/typeorm ./node_modules/typeorm/cli.js",
-    "uid": "just --config ./.config/just.config.ts uid"
+    "uid": "just --config ./.configs/just.config.ts uid"
   },
   "repository": {
     "type": "git",
@@ -58,10 +58,10 @@
     "eslint-plugin-jsdoc": "^39.3.6",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^4.2.1",
-    "fast-maker": "^1.0.2",
+    "fast-maker": "^1.1.0",
     "figlet": "^1.5.2",
     "jest": "^28.1.2",
-    "just-scripts": "^2.0.1",
+    "just-scripts": "^2.0.5",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
     "prettier-eslint": "^15.0.1",
@@ -88,8 +88,8 @@
     "accept-language": "^3.0.18",
     "ajv": "^8.11.0",
     "ajv-formats": "^2.1.1",
+    "chalk": "^4.1.2",
     "change-case": "^4.1.2",
-    "colors": "^1.4.0",
     "dayjs": "^1.11.5",
     "debug": "^4.3.4",
     "dotenv": "^16.0.2",
@@ -103,6 +103,7 @@
     "my-easy-fp": "^0.16.0",
     "my-node-fp": "^0.8.1",
     "node-polyglot": "^2.4.2",
+    "path-to-regexp": "^6.2.1",
     "pm2": "^5.2.0",
     "type-fest": "^2.19.0",
     "urlcat": "^2.0.4",
