--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -1,4 +1,8 @@
 {
   "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "declaration": false /* Generate .d.ts files from TypeScript and JavaScript files in your project. */,
+    "declarationMap": false /* Create sourcemaps for d.ts files. */
+  },
   "exclude": ["scripts/**/*"]
 }
