just-scripts replace to just-task
* just-scripts replace to just-task
* upgrade @fastify/swagger
* add new plugin @fastify/swagger-ui
* deps version bumps
  * prod
    * add @fastify/swagger-ui: 1.1.0
    * add @fastify/url-data: 5.1.0
    * change @fastify/cors: 8.1.0 > 8.1.1
    * change @fastify/multipart: 7.1.2 > 7.3.0
    * change @fastify/swagger: 7.5.1 > 8.1.0
    * change dayjs: 1.11.5 > 1.11.6
    * change dotenv: 16.0.2 > 16.0.3
    * change fastify: 4.5.3 > 4.9.2
    * change fastify-plugin: 4.2.1 > 4.3.0
    * change jin-frame: 2.5.1 > 3.0.0
    * change pm2: 5.2.0 > 5.2.2
    * change type-fest: 2.19.0 > 3.1.0
    * change winston: 3.8.1 > 3.8.2
  * dev
    * add deps-diff: 1.0.0
    * add execa: 5.1.1
    * add just-task: 1.6.1
    * change eslint: 8.23.0 > 8.26.0
    * change eslint-import-resolver-typescript: 3.5.0 > 3.5.2
    * change eslint-plugin-jsdoc: 39.3.6 > 39.3.25
    * change nodemon: 2.0.19 > 2.0.20
    * change ts-loader: 9.3.1 > 9.4.1
    * change typescript: 4.8.2 > 4.8.4
    * remove just-scripts: 2.0.5

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
   "ts-node": {
     "transpileOnly": true,
     "files": true,
-    "compilerOptions": {}
+    "compilerOptions": {},
+    "require": ["tsconfig-paths/register"]
   },
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
