--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "clean": "just --config ./.configs/just.config.ts clean",
     "dev": "nodemon --config ./.configs/nodemon.json",
     "devs": "concurrently \"npm run dev\" \"npm run tjs-w\" \"npm run route-w\"",
-    "debug": "just --config ./.configs/just.config.ts debug",
+    "debug": "cross-env DEBUG=maeum:* ENV_APPLICATION_LOG_LEVEL=debug TS_NODE_PROJECT=tsconfig.json node -r ts-node/register --inspect-brk --nolazy src/listen.ts",
     "just": "just --config ./.configs/just.config.ts",
     "lint": "just --config ./.configs/just.config.ts lint",
     "route": "cross-env NODE_ENV=production fast-maker route --config ./.configs/.fastmakerrc",
@@ -26,6 +26,7 @@
     "tsc": "just --config ./.configs/just.config.ts tsc",
     "tsc-watch": "just --config ./.configs/just.config.ts tsc-watch",
     "typeorm": "cross-env DISABLE_RELATION_MODEL=on ts-node -r tsconfig-paths/register -r scripts/typeorm ./node_modules/typeorm/cli.js",
+    "dd": "deps-diff md -d prod -d dev --title-list-type '*' --deps-list-type '*' --content-list-type '*'",
     "uid": "just --config ./.configs/just.config.ts uid"
   },
   "repository": {
@@ -50,19 +51,21 @@
     "archiver": "^5.3.1",
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.23.0",
+    "deps-diff": "^1.0.0",
+    "eslint": "^8.26.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^3.5.0",
+    "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsdoc": "^39.3.6",
+    "eslint-plugin-jsdoc": "^39.3.25",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^4.2.1",
+    "execa": "^5.1.1",
     "fast-maker": "^1.1.0",
     "figlet": "^1.5.2",
     "jest": "^28.1.2",
-    "just-scripts": "^2.0.5",
-    "nodemon": "^2.0.19",
+    "just-task": "^1.6.1",
+    "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "prettier-eslint": "^15.0.1",
     "prettier-plugin-organize-imports": "^3.1.1",
@@ -70,11 +73,11 @@
     "shelljs": "^0.8.5",
     "simple-tjscli": "^1.1.2",
     "ts-jest": "^28.0.8",
-    "ts-loader": "^9.3.1",
+    "ts-loader": "^9.4.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.0",
     "tsconfig-paths-webpack-plugin": "^4.0.0",
-    "typescript": "^4.8.2",
+    "typescript": "^4.8.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-merge": "^5.8.0",
@@ -82,32 +85,34 @@
     "webpackbar": "^5.0.2"
   },
   "dependencies": {
-    "@fastify/cors": "^8.1.0",
-    "@fastify/multipart": "^7.1.2",
-    "@fastify/swagger": "^7.5.1",
+    "@fastify/cors": "^8.1.1",
+    "@fastify/multipart": "^7.3.0",
+    "@fastify/swagger": "^8.1.0",
+    "@fastify/swagger-ui": "^1.1.0",
+    "@fastify/url-data": "^5.1.0",
     "accept-language": "^3.0.18",
     "ajv": "^8.11.0",
     "ajv-formats": "^2.1.1",
     "chalk": "^4.1.2",
     "change-case": "^4.1.2",
-    "dayjs": "^1.11.5",
+    "dayjs": "^1.11.6",
     "debug": "^4.3.4",
-    "dotenv": "^16.0.2",
-    "fastify": "^4.5.3",
-    "fastify-plugin": "^4.2.1",
+    "dotenv": "^16.0.3",
+    "fastify": "^4.9.2",
+    "fastify-plugin": "^4.3.0",
     "http-status-codes": "^2.2.0",
     "jin-curlize": "^0.5.0",
-    "jin-frame": "^2.5.1",
+    "jin-frame": "^3.0.0",
     "json-schema": "^0.4.0",
     "jsonc-parser": "^3.2.0",
     "my-easy-fp": "^0.16.0",
     "my-node-fp": "^0.8.1",
     "node-polyglot": "^2.4.2",
     "path-to-regexp": "^6.2.1",
-    "pm2": "^5.2.0",
-    "type-fest": "^2.19.0",
+    "pm2": "^5.2.2",
+    "type-fest": "^3.1.0",
     "urlcat": "^2.0.4",
     "uuid": "^9.0.0",
-    "winston": "^3.8.1"
+    "winston": "^3.8.2"
   }
 }
