Add new json-schema management solution: create-ts-json-schema
* new json-schema management solution: create-ts-json-schema
* add schema read and bootstrap logic
* remove legacy schema typescript code
* deps
  * dev
    * add create-ts-json-schema: 0.10.0
    * change @types/jest: 29.0.0 > 29.2.0
    * change jest: 28.1.2 > 29.2.2
    * change ts-jest: 28.0.8 > 29.0.3
    * remove simple-tjscli: 1.1.2

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,7 @@
   "files.associations": {
     ".fastmakerrc": "jsonc",
     ".tjsclirc": "jsonc",
+    ".ctjsrc": "jsonc",
     "config.*.json": "jsonc"
   },
   "files.eol": "\n",
