apply create-ts-json-schema utility
* json-schema builder change simple-tjscli to create-ts-json-schema
* add store.json file in configuration
* remove schema directory
* change addServerSchema function

--- a/.configs/.ctjsrc
+++ b/.configs/.ctjsrc
@@ -1,6 +1,7 @@
 {
   "output": "./src/config/files/store.json",
   "project": "tsconfig.json",
+  "format": "json",
   "generator-option": {
     "additionalProperties": true
   },
