--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "dayjs": "^1.11.6",
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
+    "fast-json-stringify": "^5.4.1",
     "fastify": "^4.9.2",
     "fastify-plugin": "^4.3.0",
     "http-status-codes": "^2.2.0",
