--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "debug": "cross-env DEBUG=maeum:* ENV_APPLICATION_LOG_LEVEL=debug TS_NODE_PROJECT=tsconfig.json node -r ts-node/register --inspect-brk --nolazy src/listen.ts",
     "just": "just --config ./.configs/just.config.ts",
     "lint": "just --config ./.configs/just.config.ts lint",
+    "prettier": "just --config ./.configs/just.config.ts prettier",
+    "lnb": "concurrently \"npm run build\" \"npm run lint\"",
     "route": "cross-env NODE_ENV=production fast-maker route --config ./.configs/.fastmakerrc",
     "route-w": "cross-env NODE_ENV=production fast-maker watch --config ./.configs/.fastmakerrc",
     "start:withoutpm2": "TZ=Asia/Seoul node --enable-source-maps src/app.js",
@@ -25,7 +27,8 @@
     "typeorm": "cross-env DISABLE_RELATION_MODEL=on ts-node -r tsconfig-paths/register -r scripts/typeorm ./node_modules/typeorm/cli.js",
     "ctjs": "ctjs --config ./.configs/.ctjsrc",
     "dd": "deps-diff md -d prod -d dev --title-list-type '*' --deps-list-type '*' --content-list-type '*'",
-    "uid": "just --config ./.configs/just.config.ts uid"
+    "uid": "just --config ./.configs/just.config.ts uid",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -38,78 +41,80 @@
     "@types/archiver": "^5.3.1",
     "@types/debug": "^4.1.7",
     "@types/figlet": "^1.5.5",
-    "@types/jest": "^29.2.0",
-    "@types/node": "^18.7.15",
+    "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.17",
     "@types/node-polyglot": "^2.4.2",
     "@types/shelljs": "^0.8.11",
-    "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.36.2",
-    "@typescript-eslint/eslint-plugin-tslint": "^5.36.2",
-    "@typescript-eslint/parser": "^5.36.2",
+    "@types/uuid": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/eslint-plugin-tslint": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
     "archiver": "^5.3.1",
+    "concurrently": "^7.6.0",
     "copy-webpack-plugin": "^11.0.0",
-    "create-ts-json-schema": "^0.11.3",
+    "create-ts-json-schema": "^0.11.4",
     "cross-env": "^7.0.3",
-    "deps-diff": "^1.0.0",
-    "eslint": "^8.26.0",
+    "deps-diff": "^1.0.1",
+    "eslint": "^8.30.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsdoc": "^39.3.25",
+    "eslint-plugin-jsdoc": "^39.6.4",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^4.2.1",
     "execa": "^5.1.1",
     "fast-maker": "^1.1.0",
     "figlet": "^1.5.2",
-    "jest": "^29.2.2",
-    "just-task": "^1.6.1",
+    "jest": "^29.3.1",
+    "just-task": "^1.7.0",
     "nodemon": "^2.0.20",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.1",
     "prettier-eslint": "^15.0.1",
-    "prettier-plugin-organize-imports": "^3.1.1",
+    "prettier-plugin-organize-imports": "^3.2.1",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.5",
     "ts-jest": "^29.0.3",
-    "ts-loader": "^9.4.1",
+    "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.1.0",
+    "tsconfig-paths": "^4.1.1",
     "tsconfig-paths-webpack-plugin": "^4.0.0",
-    "typescript": "^4.8.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
+    "typescript": "^4.9.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
     "webpack-merge": "^5.8.0",
     "webpack-node-externals": "^3.0.0",
-    "webpackbar": "^5.0.2"
+    "webpackbar": "^5.0.2",
+    "husky": "^8.0.0"
   },
   "dependencies": {
-    "@fastify/cors": "^8.1.1",
+    "@fastify/cors": "^8.2.0",
     "@fastify/multipart": "^7.3.0",
-    "@fastify/swagger": "^8.1.0",
-    "@fastify/swagger-ui": "^1.1.0",
-    "@fastify/url-data": "^5.1.0",
+    "@fastify/swagger": "^8.2.1",
+    "@fastify/swagger-ui": "^1.3.0",
+    "@fastify/url-data": "^5.2.0",
     "accept-language": "^3.0.18",
-    "ajv": "^8.11.0",
+    "ajv": "^8.11.2",
     "ajv-formats": "^2.1.1",
     "chalk": "^4.1.2",
     "change-case": "^4.1.2",
-    "dayjs": "^1.11.6",
+    "dayjs": "^1.11.7",
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
-    "fast-json-stringify": "^5.4.1",
-    "fastify": "^4.9.2",
-    "fastify-plugin": "^4.3.0",
+    "fast-json-stringify": "^5.5.0",
+    "fastify": "^4.10.2",
+    "fastify-plugin": "^4.4.0",
     "http-status-codes": "^2.2.0",
     "jin-curlize": "^0.5.0",
-    "jin-frame": "^3.0.0",
+    "jin-frame": "^3.0.2",
     "json-schema": "^0.4.0",
     "jsonc-parser": "^3.2.0",
-    "my-easy-fp": "^0.16.0",
+    "my-easy-fp": "^0.17.0",
     "my-node-fp": "^0.8.1",
     "node-polyglot": "^2.4.2",
     "path-to-regexp": "^6.2.1",
     "pm2": "^5.2.2",
-    "type-fest": "^3.1.0",
+    "type-fest": "^3.4.0",
     "urlcat": "^2.0.4",
     "uuid": "^9.0.0",
     "winston": "^3.8.2"
